--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "book-project",
   "version": "0.0.1",
-  "private": true,
-  "engines": {
-    "node": "5.9.1"
+  "main": "server.js",
+  "scripts": {
+    "start": "./node_modules/.bin/nodemon --ignore node_modules server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
